# students_DB

./: CMakeLists.txt  Makefile  README.md  data.json
src/: change_db.c  check.c  display.c  free_malloc.c  main.c  parse.c  print.c  read.c  students.h
